--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ font-family: 'Poppins', sans-serif;
   /* Darken */
   --ltn__primary-color-3: #133236;
   /* Lighten */
-  --ltn__secondary-color: #3282B8;
+  --ltn__secondary-color: #0000fe;
   --ltn__secondary-color-2: #0F4C75;
   /* Darken */
   --ltn__secondary-color-3: #fb412a;
